--- a/documentation/py-modindex.html
+++ b/documentation/py-modindex.html
@@ -50,6 +50,7 @@
     <script defer="defer" src="_static/underscore.js"></script>
     <script defer="defer" src="_static/doctools.js"></script>
     <script defer="defer" src="_static/tabs.js"></script>
+    <script defer="defer" src="_static/js/cleaner_navigation.js"></script>
     <script defer="defer" src="_static/sphinx-needs/libs/html/datatables.min.js"></script>
     <script defer="defer" src="_static/sphinx-needs/libs/html/datatables_loader.js"></script>
     <script defer="defer" src="_static/sphinx-needs/libs/html/sphinx_needs_collapse.js"></script>
