--- a/documentation/genindex.html
+++ b/documentation/genindex.html
@@ -49,6 +49,7 @@
     <script defer="defer" src="_static/underscore.js"></script>
     <script defer="defer" src="_static/doctools.js"></script>
     <script defer="defer" src="_static/tabs.js"></script>
+    <script defer="defer" src="_static/js/cleaner_navigation.js"></script>
     <script defer="defer" src="_static/sphinx-needs/libs/html/datatables.min.js"></script>
     <script defer="defer" src="_static/sphinx-needs/libs/html/datatables_loader.js"></script>
     <script defer="defer" src="_static/sphinx-needs/libs/html/sphinx_needs_collapse.js"></script>
@@ -112,8 +113,11 @@
   <aside class="sidebar-drawer">
     <div class="sidebar-container">
       
-      <div class="sidebar-sticky"><div class="sidebar-scroll"><a class="sidebar-brand" href="index.html">
+      <div class="sidebar-sticky"><div class="sidebar-scroll"><a class="sidebar-brand centered" href="index.html">
   
+  <div class="sidebar-logo-container">
+    <img class="sidebar-logo" src="_static/logo.png" alt="Logo"/>
+  </div>
   
   <span class="sidebar-brand-text">mmseqs Documentation</span>
   
