Change python-biosnake repo name to just biosnake

--- a/.doc/_templates/srclinks.html
+++ b/.doc/_templates/srclinks.html
@@ -42,10 +42,10 @@
       {%- endif %}
       <div>
           <div style="display:inline-block">
-              <a class="github-button" href="https://github.com/styczynski/python-biosnake" data-icon="octicon-star" data-size="large" aria-label="Star styczynski/python-biosnake on GitHub">Star</a>
+              <a class="github-button" href="https://github.com/styczynski/biosnake" data-icon="octicon-star" data-size="large" aria-label="Star styczynski/biosnake on GitHub">Star</a>
           </div>
           <div style="display:inline-block">
-              <a class="github-button" href="https://github.com/styczynski/python-biosnake/archive/master.zip" data-icon="octicon-download" data-size="large" aria-label="Download styczynski/python-biosnake on GitHub">Download</a>
+              <a class="github-button" href="https://github.com/styczynski/biosnake/archive/master.zip" data-icon="octicon-download" data-size="large" aria-label="Download styczynski/biosnake on GitHub">Download</a>
           </div>
       </div>
       <div style="display:inline-block">
